--- a/css/index.css
+++ b/css/index.css
@@ -320,6 +320,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 10px;
   z-index: 3;
   align-items: center;
   justify-content: center;
