--- a/css/cart.css
+++ b/css/cart.css
@@ -172,8 +172,9 @@
   margin-bottom: 0;
 }
 .cart_page .bottom .form .left .input label {
-  flex: 0 0 80px;
+  flex: 0 0 100px;
   font-size: 1.25rem;
+  margin-bottom: 0;
 }
 .cart_page .bottom .form .right {
   display: flex;
@@ -189,6 +190,9 @@
   outline: none;
   padding: 10px;
   font-size: 1.25rem;
+}
+.cart_page .bottom .form textarea {
+  height: 300px;
 }
 .cart_page .btns {
   display: flex;
